@@ -1,4 +1,5 @@
 Sigil v0.1.7 <ADD DATE>
+    - added a "Sigil Dev Blog" Help menu entry
     - fixed an issue with loading TXT files with Mac-style (CR) line endings (issue #170)
     - fixed an issue with loading UTF-16 encoded files that used Windows style (CRLF) line endings
     - Sigil should now detect UTF-8 encoded HTML files even when they don't specify that they
